<resources>
    <string name="app_name">Energieeffizienz</string>
    <string name="opendrawer">Open</string>
    <string name="closedrawer">Close</string>
    <string name="nav_home">Home</string>
    <string name="nav_current_measurement">Current Measurement</string>
    <string name="nav_subtitle_records">Records</string>
    <string name="nav_subtitle_records_specific_daily_values">Detailed Daily Values</string>
    <string name="nav_diagram_energy">Diagram: Energy Income</string>
    <string name="nav_diagram_one_day">Diagram: Detailed Daily Values</string>
    <string name="nav_table">Table</string>
    <string name="nav_table_one_day">Table</string>
    <string name="nav_subtitle_information">Information</string>
    <string name="nav_system">System</string>
    <string name="nav_students">Students</string>
    <string name="nav_app">App</string>
    <string name="nav_settings">Settings</string>
    <string name="main_activity_alert_about">About</string>
    <string name="main_activity_alert_close">close</string>
    <string name="main_activity_alert_version">Energieeffizienz v0.1</string>
    <string name="main_activity_alert_developer">Developer: Richard Heinz</string>
    <string name="main_activity_alert_mail">heirim12@htl-kaindorf.ac.at</string>
    <string name="main_activity_alert_info1">This app has been produced for the HTL Kaindorf as a part of "Diplomarbeit" "Sonnenenergieeffizienz".</string>
    <string name="main_activity_alert_info2">With it you can query and show current measurement, energyincome and long time values from the database</string>
    <string name="fragment_home_title">Energy Efficiency</string>
    <string name="fragment_home_panel1">Panel 1</string>
    <string name="fragment_home_dynamic">(dynamic)</string>
    <string name="fragment_home_panel2">Panel 2</string>
    <string name="fragment_home_static">(static)</string>
    <string name="fragment_home_chart_title">total energie yield</string>
    <string name="fragment_home_chart_description">(of the last seven days)</string>
    <string name="fragment_current_measurement_title">Current Measurement</string>
    <string name="fragment_current_measurement_toast_timeout">There was an problem with the server communication.</string>
    <string name="fragment_current_measurement_spinner_continuously">continuously</string>
    <string name="fragment_current_measurement_spinner1sec">1 sec</string>
    <string name="fragment_current_measurement_spinner3sec">2 sec</string>
    <string name="fragment_current_measurement_spinner5sec">5 sec</string>
    <string name="fragment_current_measurement_spinner10sec">10 sec</string>
    <string name="fragment_current_measurement_toggleON">ON</string>
    <string name="fragment_current_measurement_toggleOFF">OFF</string>
    <string name="fragment_current_measurement_panel1">Panel 1:</string>
    <string name="fragment_current_measurement_dynamic">(dynamic)</string>
    <string name="fragment_current_measurement_panel2">Panel 2:</string>
    <string name="fragment_current_measurement_static">(static)</string>
    <string name="fragment_current_measurement_angle2">30°</string>
    <string name="fragment_current_measurement_orientation2">South-West</string>
    <string name="fragment_current_measurement_angle">Azimuth</string>
    <string name="fragment_current_measurement_orientation">Elevation</string>
    <string name="fragment_current_measurement_accu">Accu</string>
    <string name="fragment_diagram_title">Diagram</string>
    <string name="fragment_diagram_settings_icon_button">Settings</string>
    <string name="fragment_diagram_starttext">Press the Settings-Button in the Toolbar</string>
    <string name="fragment_diagram_share_icon_button">Share as Image</string>
    <string name="fragment_diagram_save_icon_button">Save as Image</string>
    <string name="fragment_diagram_no_chart">You have to choose diagram-settings to draw a diagram before!</string>
    <string name="fragment_diagram_saved_linechart1">Diagram 1 has been successfully saved.</string>
    <string name="fragment_diagram_saved_linechart2">Diagram 2 has been successfully saved.</string>
    <string name="fragment_diagram_saved">Diagram has been saved to Gallery</string>
    <string name="fragment_diagram_save_error">Something went wrong, diagram has not been saved.</string>
    <string name="fragment_diagram_chooser_dialog_share">Choose the diagram you want to share:</string>
    <string name="fragment_diagram_chooser_dialog_save_1diagram">Enter the filename:</string>
    <string name="fragment_diagram_chooser_dialog_save_2diagram">Choose the diagram you want to save and enter the filename:</string>
    <string name="fragment_diagram_chooser_dialog_diagram1">Diagram 1</string>
    <string name="fragment_diagram_chooser_dialog_diagram2">Diagram 2</string>
    <string name="fragment_diagram_share_error">Error: Something went wrong!</string>
    <string name="fragment_diagram_settings_hasnot_changed">The settings haven´t changed.</string>
    <string name="fragment_diagram_settings_has_changed">Settings have been saved, the data will be shown soon.</string>
    <string name="fragment_diagram_voltage_panel1">Voltage Panel1 [V]</string>
    <string name="fragment_diagram_voltage_panel2">Voltage Panel2 [V]</string>
    <string name="fragment_diagram_current_panel1">Current Panel1 [A]</string>
    <string name="fragment_diagram_current_panel2">Current Panel2 [A]</string>
    <string name="fragment_diagram_power_panel1">Power Panel1 [W]</string>
    <string name="fragment_diagram_power_panel2">Power Panel2 [W]</string>
    <string name="fragment_diagram_power_both_panels">Power both Panels [W]</string>
    <string name="fragment_diagram_energy_panel1">Energy Panel1 [Wh]</string>
    <string name="fragment_diagram_energy_panel2">Energy Panel2 [Wh]</string>
    <string name="fragment_diagram_energy_both_panels">Energy both Panels [Wh]</string>
    <string name="fragment_diagram_voltage_unit">V</string>
    <string name="fragment_diagram_current_unit">A</string>
    <string name="fragment_diagram_power_unit">W</string>
    <string name="fragment_diagram_energy_unit">Wh</string>
    <string name="fragment_diagram_marker_view_at">at</string>
    <string name="fragment_table_title">Table</string>
    <string name="fragment_table_settings_icon_button">Settings</string>
    <string name="fragment_table_starttext">Press the Settings-Button in the Toolbar</string>
    <string name="fragment_table_share_icon_button">Share as csv-file</string>
    <string name="fragment_table_save_icon_button">Save as csv-file</string>
    <string name="fragment_table_settings_hasnot_changed">The settings haven´t changed.</string>
    <string name="fragment_table_settings_has_changed">Settings have been saved, the data will be shown soon.</string>
    <string name="fragment_table_dateTime">Date/Time</string>
    <string name="fragment_table_voltage_panel1">Voltage P1</string>
    <string name="fragment_table_voltage_panel2">Voltag P2</string>
    <string name="fragment_table_current_panel1">Current P1</string>
    <string name="fragment_table_current_panel2">Current P2</string>
    <string name="fragment_table_power_panel1">Power P1</string>
    <string name="fragment_table_power_panel2">Power P2</string>
    <string name="fragment_table_power_both_panels">Power P1+P2</string>
    <string name="fragment_table_energy_panel1">Energy P1</string>
    <string name="fragment_table_energy_panel2">Energy P2</string>
    <string name="fragment_table_energy_both_panels">Energy P1+P2</string>
    <string name="fragment_table_voltage_unit">V</string>
    <string name="fragment_table_current_unit">A</string>
    <string name="fragment_table_power_unit">W</string>
    <string name="fragment_table_energy_unit">Wh</string>
    <string name="fragment_info_system_title">Information: System</string>
    <string name="fragment_info_system_Headline">Sun Energy Efficiency</string>
    <string name="fragment_info_1">In the dislocation in Arnfels (HTL Kaindorf) is a photovoltaic system with two panels installed. One Panel is static and one is dynamic and following the sun.</string>
    <string name="fragment_info_2">For our "Diplomarbeit" we took the finished mechanic construction and rebuild the electronic with the control unit for moving the dinamic panel.</string>
    <string name="fragment_info_3">Now the system follows the sun, measures the energy income and saves all relevant data in an database. With the energy income we heat the school-janitors workshop.</string>
    <string name="fragment_info_4">With the Android-app the current measurement and the long time records can be displayed.</string>
    <string name="fragment_info_students_title">Information: Students</string>
    <string name="test_info_students">Information: Students</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_settings_server_ip">Server IP</string>
    <string name="activity_settings_server_port">Server Port</string>
    <string name="activity_settings_user">User</string>
    <string name="activity_settings_password">Password</string>
    <string name="activity_settings_save">Save</string>
    <string name="activity_settings_non_input_exception">Empty field: </string>
    <string name="activity_settings_successfully_changed">Settings has been succesfully changed</string>
    <string name="dialog_diagram_title">Settings</string>
    <string name="dialog_diagram_ok">ok</string>
    <string name="dialog_diagram_cancel">cancel</string>
    <string name="dialog_diagram_start_date">Start Date:</string>
    <string name="dialog_diagram_end_date">End Date:</string>
    <string name="dialog_diagram_panel1">Panel 1:</string>
    <string name="dialog_diagram_panel2">Panel 2:</string>
    <string name="dialog_diagram_both_panels">Both Panels:</string>
    <string name="dialog_diagram_all">(all)</string>
    <string name="dialog_diagram_voltage">Voltage</string>
    <string name="dialog_diagram_current">Current</string>
    <string name="dialog_diagram_power">Power</string>
    <string name="dialog_diagram_energy">Energy</string>
    <string name="dialog_diagram_energy_panel1">Panel 1</string>
    <string name="dialog_diagram_energy_panel2">Panel 2</string>
    <string name="dialog_diagram_energy_both">Both Panels</string>
    <string name="dialog_records_one_day_title">Settings</string>
    <string name="dialog_records_one_day_ok">ok</string>
    <string name="dialog_records_one_day_cancel">cancel</string>
    <string name="dialog_records_one_day_date">Start Date:</string>
    <string name="dialog_records_one_day_panel1">Panel 1:</string>
    <string name="dialog_records_one_day_panel2">Panel 2:</string>
    <string name="dialog_records_one_day_panels">Both Panels:</string>
    <string name="dialog_records_one_day_all">(all)</string>
    <string name="dialog_records_one_day_voltage">Voltage</string>
    <string name="dialog_records_one_day_current">Current</string>
    <string name="dialog_records_one_day_power">Power</string>
    <string name="shared_preference_file1">at.htlkaindorf.heirim12.energieeffizenz.Preference_File_1</string>
    <string name="shared_preference_saved_ip">at.htlkaindorf.heirim12.energieeffizenz.Saved_IP</string>
    <string name="shared_preference_saved_port">at.htlkaindorf.heirim12.energieeffizenz.Saved_PORT</string>
    <string name="shared_preference_saved_user">at.htlkaindorf.heirim12.energieeffizenz.Saved_USER</string>
    <string name="shared_preference_saved_password">at.htlkaindorf.heirim12.energieeffizenz.Saved_PASSWORD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_table_one_day_title">Table</string>
    <string name="fragment_table_one_day_settings_icon_button">Settings</string>
    <string name="fragment_table_one_day_starttext">Press the Settings-Button in the Toolbar</string>
</resources>