<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/table_one_day_settings_icon"
        android:icon="@drawable/ic_diagram_table_settings_white_24dp"
        android:title="@string/fragment_diagram_settings_icon_button"
        app:showAsAction="always"
        >
    </item>

    <item
        android:id="@+id/table_one_day_share_icon"
        android:icon="@drawable/ic_diagram_table_share_white_24dp"
        android:title="@string/fragment_table_share_icon_button"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/table_one_day_save_icon"
        android:icon="@drawable/ic_diagram_table_save_white_24dp"
        android:title="@string/fragment_table_save_icon_button"
        app:showAsAction="never">
    </item>
</menu>