<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimaryGreen"
        android:text="@string/dialog_records_one_day_title"
        android:textColor="#FFFFFFFF"
        android:textSize="@dimen/dialog_settings_title1_size"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_settings_layout_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/dialog_records_one_day_date"
                    android:textSize="@dimen/fragment_home_title2_size"
                    android:id="@+id/textView"/>

                <TextView
                    android:id="@+id/dialog_record_one_day_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/fragment_home_title2_size"/>

                <ImageButton
                    android:id="@+id/dialog_record_one_day_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_icon_black_24dp"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_settings_space"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dialog_settings_text_gap_big"
                    android:gravity="center_vertical"
                    android:text="@string/dialog_diagram_both_panels"
                    android:textSize="@dimen/fragment_home_title2_size"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/dialog_records_one_day_powerBoth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_diagram_power"
                    android:textSize="@dimen/dialog_settings_text_size"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_settings_space"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dialog_settings_text_gap_big"
                        android:gravity="center_vertical"
                        android:text="@string/dialog_diagram_panel1"
                        android:textSize="@dimen/fragment_home_title2_size"/>

                    <CheckBox
                        android:id="@+id/dialog_records_one_day_settings_all1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dialog_settings_text_gap_small"
                        android:text="@string/dialog_diagram_all"
                        android:textSize="@dimen/dialog_settings_text_size"/>

                    <CheckBox
                        android:id="@+id/dialog_records_one_day_settings_voltage1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dialog_settings_text_gap_big"
                        android:text="@string/dialog_diagram_voltage"
                        android:textSize="@dimen/dialog_settings_text_size"/>

                    <CheckBox
                        android:id="@+id/dialog_records_one_day_settings_current1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dialog_settings_text_gap_big"
                        android:text="@string/dialog_diagram_current"
                        android:textSize="@dimen/dialog_settings_text_size"/>

                    <CheckBox
                        android:id="@+id/dialog_records_one_day_settings_power1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dialog_settings_text_gap_big"
                        android:text="@string/dialog_diagram_power"
                        android:textSize="@dimen/dialog_settings_text_size"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dialog_settings_text_gap_big"
                        android:gravity="center_vertical"
                        android:text="@string/dialog_diagram_panel2"
                        android:textSize="@dimen/fragment_home_title2_size"/>

                    <CheckBox
                        android:id="@+id/dialog_records_one_day_settings_all2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dialog_settings_text_gap_small"
                        android:text="@string/dialog_diagram_all"
                        android:textSize="@dimen/dialog_settings_text_size"/>

                    <CheckBox
                        android:id="@+id/dialog_records_one_day_settings_voltage2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dialog_settings_text_gap_big"
                        android:text="@string/dialog_diagram_voltage"
                        android:textSize="@dimen/dialog_settings_text_size"/>

                    <CheckBox
                        android:id="@+id/dialog_records_one_day_settings_current2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dialog_settings_text_gap_big"
                        android:text="@string/dialog_diagram_current"
                        android:textSize="@dimen/dialog_settings_text_size"/>

                    <CheckBox
                        android:id="@+id/dialog_records_one_day_settings_power2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dialog_settings_text_gap_big"
                        android:text="@string/dialog_diagram_power"
                        android:textSize="@dimen/dialog_settings_text_size"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>